package polar;

import "directory.proto";

message SensorStatus {
	required uint32 start_index = 1;
	required uint32 stop_index = 2;
}
message SensorCalibration {

	enum Operation {
		UNKNOWN = 1;
	}
	enum Cause {
		UNKNOWN_CAUSE = 0;
		OTHER_CAUSE = 1;
	}

	required uint32 start_index = 1;
	required float value = 2;
	required Operation operation = 3;
	required Cause cause = 4;
}

message SamplesF28 {
	repeated int32 f1 = 1 [packed=true];
}

message SensorOfflineDuration {
	required Time start_time = 1;
	required Time duration = 2;
}

message Samples {
	optional Time record_interval = 1;
	repeated int32 heartrate = 2 [packed=true];
	repeated SensorStatus heartrate_offline = 3;
	repeated int32 cadence = 4 [packed=true];
	repeated SensorStatus cadence_offline = 5;
	repeated float altitude = 6; 
	repeated float speed = 9;
	repeated float distance = 11;
	repeated SensorCalibration stride_calibration = 15;
	repeated SensorStatus altitude_offline = 18;
	repeated SamplesF28 samplesf28 = 28;
	repeated SensorOfflineDuration pause = 30;
}

message Route {
	repeated int32 duration = 1 [packed=true];
	repeated double latitude = 2 [packed=true];
	repeated double longitude = 3 [packed=true];
	repeated sint32 altitude = 4 [packed=true];
	repeated int32 satellites = 5 [packed=true];
	required DateTime timestamp = 9; //? copying from bipolar code, weird that it skips a bunch of fields?
	// Actually, my ROUTE file has field 9, then field 5(which is length delimited, not an integer?), then 2 (length delimited), 3 (length delimited), 4 (length delimited), and 1 (length delimited)
}

message TrainingLoad {
	required int32 load = 1;
	required Time recovery_time = 2;
	optional int32 carbs = 3;
	optional int32 protein = 4;
	optional int32 fat = 5;
}

message Stat {
	optional int32 average = 1;
	optional int32 maximum = 2;
}

message Activity {
	message Sport {
		repeated string name = 1; // unsure if it's actually repeated; haven't seen that yet
	}
	enum TrainingBenefit {
		UNKNOWN = 1;
		STEADY_STATE_TRAINING = 11;
		BASIC_TRAINING_LONG = 16;
		BASIC_TRAINING = 17;
	}
	required DateTime start_time = 1;
	required uint32 exercise_count = 2;
	optional string device_id = 3;
	optional string device_model = 4;
	optional Time duration = 5;
	optional float distance = 6; //meters
	optional int32 calories = 7;
	optional Stat heartrate = 8;
	repeated Time heartrate_duration = 9; // in order for zones 1,2,3,4,5
	optional TrainingLoad training_load = 10;
	optional Sport sport = 11; // bipolar says "session-name" instead of sport?
	optional double latitude = 15;
	optional double longitude = 16;
	optional TrainingBenefit training_benefit = 17; // stolen from bipolar again
	required DateTime end_time = 20;
}
